--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   dio: ^4.0.0
   flutter_polyline_points: ^1.0.0
   google_maps_flutter: ^2.0.2
+  firebase_core: ^2.25.5
+  cloud_firestore: ^4.15.6
+  firebase_auth: ^4.17.6
 
 dev_dependencies:
   flutter_test:
